--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 apply from: '../deps.gradle'
+apply from: '../AndroidCodeQualityConfig/quality.gradle'
 
 android {
     compileSdkVersion versions.TARGET_SDK
