--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Static code analyzers
-          command: ./gradlew detektCheck checkstyle pmd lintProductionRelease
+          command: ./gradlew detektCheck checkstyle pmd lint
       - run:
           name: Run Tests
           command: ./gradlew assembleDebug
