--- a/deps.gradle
+++ b/deps.gradle
@@ -3,14 +3,15 @@ ext {
             BUILD_TOOLS: '27.0.3',
             MIN_SDK    : 16,
             TARGET_SDK : 27,
-            SUPPORT    : '27.0.2',
+            SUPPORT    : '27.1.1',
             OK_HTTP    : '3.4.1',
             RETROFIT   : '2.3.0',
             KODEIN     : '4.1.0',
             CONDUCTOR  : '2.1.4',
             RX_JAVA    : '2.1.9',
+            RX_KOTLIN  : '2.2.0',
             RX_ANDROID : '2.0.2',
-            RX_PM      : '1.1.2',
+            RX_PM      : '1.1.3',
             RX_BINDING : '2.1.1',
             GLIDE      : '4.6.1',
             STETHO     : '1.5.0',
@@ -49,6 +50,7 @@ ext {
 
     rxJava = [
             rxJava   : "io.reactivex.rxjava2:rxjava:$versions.RX_JAVA",
+            rxKotlin : "io.reactivex.rxjava2:rxkotlin:$versions.RX_KOTLIN",
             rxAndroid: "io.reactivex.rxjava2:rxandroid:$versions.RX_ANDROID"
     ]
 
