--- a/deps.gradle
+++ b/deps.gradle
@@ -1,30 +1,31 @@
 ext {
     versions = [
-            BUILD_TOOLS: '27.0.3',
+            BUILD_TOOLS: '28.0.3',
             MIN_SDK    : 16,
-            TARGET_SDK : 27,
-            SUPPORT    : '27.1.1',
-            OK_HTTP    : '3.4.1',
-            RETROFIT   : '2.3.0',
-            KODEIN     : '5.0.0',
-            CONDUCTOR  : '2.1.4',
-            RX_JAVA    : '2.1.9',
-            RX_KOTLIN  : '2.2.0',
-            RX_ANDROID : '2.0.2',
-            RX_PM      : '1.1.3',
+            TARGET_SDK : 28,
+            OK_HTTP    : '3.14.2',
+            RETROFIT   : '2.6.0',
+            KODEIN     : '6.2.1',
+            CONDUCTOR  : '2.1.5',
+            RX_JAVA    : '2.2.9',
+            RX_KOTLIN  : '2.3.0',
+            RX_ANDROID : '2.1.1',
+            RX_PM      : '1.2.4',
             RX_BINDING : '2.1.1',
-            GLIDE      : '4.6.1',
-            STETHO     : '1.5.0',
-            JUNIT      : '4.12',
-            TEST_RUNNER: '1.0.1',
-            ESPRESSO   : '3.0.1'
+            GLIDE      : '4.9.0',
+            STETHO     : '1.5.1',
+            JUNIT      : '1.1.1',
+            TEST_CORE  : '1.2.0',
+            TEST_RUNNER: '1.2.0',
+            TEST_RULES : '1.2.0',
+            ESPRESSO   : '3.2.0'
     ]
 
-    support = [
-            appcompatV7 : "com.android.support:appcompat-v7:$versions.SUPPORT",
-            recyclerView: "com.android.support:recyclerview-v7:$versions.SUPPORT",
-            design      : "com.android.support:design:$versions.SUPPORT",
-            cardView    : "com.android.support:cardview-v7:$versions.SUPPORT"
+    androidx = [
+            appcompat   : "androidx.appcompat:appcompat:1.0.2",
+            recyclerView: "androidx.recyclerview:recyclerview:1.0.0",
+            cardView    : "androidx.cardview:cardview:1.0.0",
+            material    : "com.google.android.material:material:1.0.0"
     ]
 
     okHttp = [
@@ -64,15 +65,19 @@ ext {
     ]
 
     test = [
-            junit: "junit:junit:$versions.JUNIT"
+            junit: "androidx.test.ext:junit:$versions.JUNIT",
+            core : "androidx.test:core:$versions.TEST_CORE"
     ]
 
     androidTest = [
-            runner  : "com.android.support.test:runner:$versions.TEST_RUNNER",
-            espresso: "com.android.support.test.espresso:espresso-core:$versions.ESPRESSO"
+            junit: "androidx.test.ext:junit:$versions.JUNIT",
+            core : "androidx.test:core:$versions.TEST_CORE",
+            runner  : "androidx.test:runner:$versions.TEST_RUNNER",
+            rules   : "androidx.test:rules:$versions.TEST_RULES",
+            espresso: "androidx.test.espresso:espresso-core:$versions.ESPRESSO"
     ]
 
-    supportLibs = support.values()
+    androidxLibs = androidx.values()
     okHttpLibs = okHttp.values()
     retrofitLibs = retrofit.values()
     kodeinLibs = kodein.values()
